@@ -1,6 +1,8 @@
 AUX 0.1.1-conference-logs.patch 1272 RMD160 38906fa317991e9bdcaa9325e7997329e01f5b7e SHA1 8fa6b88e720095a5a090d3b054a8fe0dd7f509b7 SHA256 15dd13c9f42f66d64dcfda9b7d29ff393fb6b8658013df5c0c46ef6fe9c83633
 DIST ekg2-0.1.1.tar.gz 1218364 RMD160 2c7ce7ce534cff69a3cde217b8cf4e0757db1049 SHA1 ed9a4dbd7e8a14c4b4043c821fa41e3352f1f911 SHA256 563ad926becaa634c7004d309d4bcf5fccdf385cf2bba779b38679e511005400
+DIST ekg2-0.2-rc1.tar.gz 1532158 RMD160 ff558859ec58fcce28190837459553fa02dac956 SHA1 9473e70784747ffb023eecbba2bafe2c28fefafc SHA256 43848d765dc4d298cefbceabd58491e0f19769aaaa0ec41475d586aecf1a9383
 EBUILD ekg2-0.1.1-r1.ebuild 2731 RMD160 96aab2fbf0ae4cb6bdac386dc5699b36586b8073 SHA1 ab2b3fa34f7580b3f09e5ffcffd6f8dbcf21c421 SHA256 eca9d43746af90d81a904a43de736cc5ee130cb5e9b6061fe15468b26f1f14f8
 EBUILD ekg2-0.1.1.ebuild 2665 RMD160 5742501a368682c6be1c169b5e04392835e3b373 SHA1 f59b4f5e6536338afbdfcc42e2e3c58374549e89 SHA256 5b63a2988de62628298cbbef2154a998701cb2863c67993d01a9ea862e596c0d
-EBUILD ekg2-9999.ebuild 3290 RMD160 f0e0d3b9c4a3ec489a7b78723e0f7e95cd13a5de SHA1 e79189770f8beee99ebdf679c0a5ad7071bc5815 SHA256 54906779dd6a2c210ae96e1f263124fd0ad2713cc90dbeca04a835071e9c2b20
+EBUILD ekg2-0.2_rc1.ebuild 3145 RMD160 5ef9502f96b54538075b2490d52cb3ed79f0481a SHA1 047f2c8878102fbfcc7fe7f20f4c67f7e056f1c0 SHA256 af33da2cedf15023defd2b9ba83110d46c90c69f580f89b25333c716b383294a
+EBUILD ekg2-9999.ebuild 3259 RMD160 4cb5bcd1b7ea60acf7337ef66d6597f9cbc83566 SHA1 c4d00d96573c67ed5386d34caf5c6014e6190c68 SHA256 e956e532712700e4cd41fd44eef06c59d95fcf3ce921e5b2c660fc3c4766460a
 MISC ChangeLog 868 RMD160 66c5dd527b1c51554e82a4c0b9878c0c735cea08 SHA1 b64e04221d1727e00569cecb834d8558e74d8400 SHA256 7aee3b4a94f9b89add37989dacc9c69a84fee7b0d460d87d3c19e28edc90cf33
