@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +ekg2-0.2_rc1.ebuild,
+  ekg2-9999.ebuild:
+  Version bump, hotfix for SVN ebuild.
+
   20 Feb 2008; Piotr Szymaniak <lazy_bum@o2.pl> ekg2-9999.ebuild:
   Added sed to change CVS -> SVN in /version. (;
 
